Api updates (#35)
* Delete getCharacterMetadata.ts

* Fix character metadata endpoint and crawl response

* Update dynamo.integration.test.ts
